# hypersignal

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py  report.py
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  decide.ts  format.ts  live.ts  sample-report.json  styles.css  types.ts  vite-env.d.ts
dashboard/src/components/: FlowsPanel.tsx  Gauge.tsx  LendingPanel.tsx  MarketsTable.tsx  OrderBook.tsx  Panel.tsx  PriceChart.tsx  RegimeHero.tsx  TopBar.tsx  WhaleTape.tsx  WhalesPanel.tsx
examples/: agent_consumer.py
scripts/: gen_fixtures.py
src/hypersignal/: __init__.py  cli.py  config.py  engine.py  flows.py  goldrush.py  lending.py  market.py  serve.py  signal.py  whales.py
src/hypersignal/fixtures/: batch_clearinghouse_state.json  candles.json  fills.json  ledger_updates.json  lending_events.json  market_meta.json  meta_and_asset_ctxs.json  orderbook.json
tests/: conftest.py  test_flows.py  test_lending.py  test_signal_and_engine.py  test_whales.py
